# wzNet

./: .gitignore  CMakeLists.txt  README.md  shell.nix
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/capnp/: wzNet.capnp
docs/bp/: proto.org  proto.org~
server/: CMakeLists.txt  main.cpp
warzone2100/: shell.nix
warzone2100/lib/qtplugins/: qtplugins.cpp  qtplugins.h  qtplugins.pro  qtpluginsinterface.h
warzone2100/src/: combat.cpp  init.cpp
wzplugin/: CMakeLists.txt  qBotNet.json  qbotnet.cpp  qbotnet.h  rpcserver.cpp
